# Fluid-simulation

./: CMakeLists.txt  Try1.cpp  Try1.cu  simulador.cu
fluid_simulation/: CMakeLists.txt  fluid_simulation.cu
